--- a/huggingface/dummy_agent_library.ipynb
+++ b/huggingface/dummy_agent_library.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "ec657731-ac7a-41dd-a0bb-cc661d00d714",
       "metadata": {
         "id": "ec657731-ac7a-41dd-a0bb-cc661d00d714",
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "5af6ec14-bb7d-49a4-b911-0cf0ec084df5",
       "metadata": {
         "id": "5af6ec14-bb7d-49a4-b911-0cf0ec084df5",
@@ -72,6 +72,8 @@
         "\n",
         "## You need a token from https://hf.co/settings/tokens, ensure that you select 'read' as the token type. If you run this on Google Colab, you can set it up in the \"settings\" tab under \"secrets\". Make sure to call it \"HF_TOKEN\"\n",
         "# HF_TOKEN = os.environ.get(\"HF_TOKEN\")\n",
+        "from google.colab import userdata\n",
+        "HF_TOKEN = userdata.get('HF_Token')\n",
         "\n",
         "client = InferenceClient(model=\"meta-llama/Llama-4-Scout-17B-16E-Instruct\")"
       ]
